# PIN-21-22

./: README.md
Data/Projet/validation/: 01.constraints  01validation.stat  01validation_01_07.tlin  02.constraints  02validation.stat  02validation_02_07.tlin  03.constraints  03validation.stat  03validation_03_07.tlin  04.constraints  04validation.stat  04validation_04_07.tlin  05.constraints  (+1 more)
Data/Training/: 20_20_1_fastrotate.constraints  20_5_01_fastcmd.constraints  20_5_1_normal.constraints  20_5_3_slowcmd.constraints  5_20_1_backward.constraints  training1.stat  training2.stat  training4.stat  training5.stat
Documents/Rendus/: Report_Serie1_Group13.docx  Report_Serie2_Group15.docx
Explications/Collisions/: README.md  collisionDemo.stat  collisionDemo.tlin
Explications/Command/: README.md
Explications/Decontamination/: README.md  decontaminationDemo.stat  decontaminationDemo.tlin
Explications/JSON/: README.md
Explications/Particule/: README.md  particleDemo.part  particleDemo.tlin
Explications/Robot/: README.md  robotDemo.rbot  robotDemo.tlin
Explications/State/: README.md
Explications/TimeLine/: README.md  decontamination.tlin
Explications/User Interface/: README.md
Src/: BUILDING.md  CMakeLists.txt  canvas.cpp  canvashelper.cpp  gui.pro  main.cpp  mainwindow.cpp  mainwindow.ui  robot.cpp  setup.cpp
Src/include/: argparser.h  canvas.h  canvashelper.h  constraints.h  generation.h  importer.h  json.h  mainwindow.h  particle.h  position.h  robot.h  simulation.h  state.h  strategy.h  timeline.h  utility.h
Src/tests/: constraints.constraints
(+8 files in other folders)
